<resources>
    <string name="app_name">Zaga Media Manager</string>
    <string name="str_location_downloaded">/Download/VideoDownload</string>
    <string name="str_repost">Repost</string>
    <string name="str_delete">Delete</string>
    <string name="str_share">Share</string>
    <string name="str_files">Files</string>
    <string name="str_home">Home</string>
    <string name="str_allow">Allow</string>
    <string name="str_done">Done</string>
    <string name="str_hint_edt">Paste direct media URL here</string>
    <string name="str_download">Download</string>
    <string name="str_photo">Photo</string>
    <string name="str_video">Video</string>
    <string name="str_explore_tag_new">New</string>
    <string name="str_setting_faq">FAQ</string>
    <string name="str_help">Help</string>
    <string name="str_change_language_title">Language Options</string>
    <string name="str_file_manager">File Manager</string>
    <string name="str_general">General</string>
    <string name="str_display">Display</string>
    <string name="str_feed_back_app">Send Feedback for Download Video App</string>
    <string name="str_request_new_feature">Request new feature</string>
    <string name="menu_nav_rate_app">Rate App</string>
    <string name="menu_nav_disclaimer">Disclaimer</string>
    <string name="menu_nav_how_to_download">How to Download</string>
    <string name="menu_nav_share_app">Share App</string>
    <string name="menu_nav_family_apps">Family Apps (AD)</string>
    <string name="menu_nav_feedback">Feedback</string>
    <string name="menu_nav_settings">Settings</string>
    <string name="menu_nav_language">Language</string>
    <string name="menu_nav_about">About</string>
    <string name="menu_nav_general">General</string>
    <string name="menu_nav_privacy_policy">Privacy Policy</string>
    <string name="dialog_login_des_1">We won\'t get your password and private information in any way.</string>
    <string name="dialog_login_button">LOGIN</string>
    <string name="dialog_login_des_2">Why do you need to login ?</string>
    <string name="dialog_login_des_3">Because of Instagram restrictions, any third-party app that wants to access posts from a private account must log in.</string>
    <string name="toolbar_tittle_choose_language">Choose Language</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="version">Version</string>
    <string name="menu_toolbar_tutorial">Tutorial</string>
    <string name="menu_toolbar_instagram">Browser</string>
    <string name="menu_toolbar_settings">Settings</string>
    <string name="how_to_use">How To Use</string>
    <string name="tutorial_copy">Method 1: Copy Link</string>
    <string name="tutorial_copy_step_1">Open a web browser and tap on "Copy Link"</string>
    <string name="tutorial_copy_step_2">Open Download Video</string>
    <string name="tutorial_copy_step_3">Paste link url</string>
    <string name="aio_auto">All Auto Download</string>
    <string name="taskcancel">Task Canceled</string>
    <string name="tutorial_share">Method 2: Share to download</string>
    <string name="tutorial_share_step_1">Open a web browser and tap on "Share"</string>
    <string name="tutorial_share_step_2">Select "Media Manager" to share</string>
    <string name="share_app_tittle">Zaga Video Downloader</string>
    <string name="share_action">Choose one</string>
    <string name="share_message">Let me recommend you this application</string>
    <string name="yourdoncomple">Download completed! Open your gallery to view the file.</string>
    <string name="cancel">Cancel</string>
    <string name="don_start">Download Started!</string>
    <string name="error_occ">Error occurred!</string>
    <string name="downloading_des">Downloading</string>
    <string name="something">Something went wrong. Please try again.</string>
    <string name="something_webiste_panele_block">Website is blocked from Server Due to maintenance, please be patient… </string>
    <string name="download">Download</string>
    <string name="audio_text">Audios :</string>
    <string name="videos_text">Videos :</string>
    <string name="resolution">Resolution</string>
    <string name="filesize">FileSize</string>
    <string name="title">Title</string>
    <string name="duration">Duration</string>
    <string name="source">Source</string>
    <string name="select_quality">Select Quality</string>
    <string name="description_goes_here">Description Goes Here</string>
    <string name="genarating_download_link">Generating download link</string>
    <string name="str_note_when_long">Loading.... Note if it takes longer then 1 min close the app and retry, if video or audio dose not play automatically then click on the play button</string>
    <string name="enter_valid">Please Enter a valid URI</string>
    <string name="invalid_url">Invalid Video URL or Check Internet Connection</string>
    <string name="str_download_location">Download Location</string>
    <string name="utils_share_txt">Hey view/download this image</string>
    <string name="app_not_install">Can\'t find this App, please download and try it again</string>
    <string name="share_video_using">Share Video using</string>
    <string name="utils_share_image_via">Share File via…</string>
    <string name="dialog_delete_body">Are you sure you want to delete this? This action cannot be undone</string>
    <string name="invalid_instagram_link">Invalid media link</string>
    <string name="str_next">Next</string>
    <string name="str_action_start">Start</string>
    <string name="guide_tittle_1">Welcome to Video Download</string>
    <string name="guide_des_1"><![CDATA[Save and Manage Media Links]]></string>
    <string name="guide_tittle_2">Media Player</string>
    <string name="guide_des_2"><![CDATA[Play your saved videos and music offline]]></string>
    <string name="guide_tittle_3"><![CDATA[Link Manager]]></string>
    <string name="guide_des_3">Organize and manage your favorite media links in one place.</string>
    <string name="loading">Loading…</string>
    <string name="DownloadComplete">Download Complete</string>
    <string name="linktiktok">add tiktok link</string>
    <string name="downloadstarted">New file download started !</string>
    <string name="nodeifittakeslonger">Loading.... Note if it takes longer then 1 min close the app and retry, if video or audio dose not play automatically then click on the play button</string>
    <string name="somthing">Something went wrong!</string>
    <string name="snapchatstory">Media Link Manager</string>
    <string name="nobundle">No bundle param</string>
    <string name="urlerr">Url format error</string>
    <string name="exceedlimit">Retries exceeded the limit</string>
    <string name="pressagain">Please press again to exit</string>
    <string name="somthing_webiste_panele_block">Website is blocked from Server Due to maintenance, please be patient… </string>
    <string name="select_the_desigred_methode_to_download_tiktok_try_the_other_one_if_one_dosent_work">Select the desired method to download, try the other one if one doesn\'t work</string>
    <string name="methode_0">Method 0</string>
    <string name="methode_1">Method 1</string>
    <string name="methode_2">Method 2</string>
    <string name="methode_3">Method 3</string>
    <string name="methode_4">Method 4</string>
    <string name="methode_5">Method 5</string>
    <string name="methode_6">Method 6</string>

    <string name="policy_disclaimer">This app does not support downloading content from YouTube or other copyrighted platforms. Users are responsible for content they download.</string>
    <string name="platform_blocked">This platform is not supported due to Google Play policies.</string>

    <string name="AdmobInterstitialAds" translatable="false">ca-app-pub-2933415255715410/2628224451</string>
    <string name="AdmobNativeAds" translatable="false">ca-app-pub-2933415255715410/97501423610</string>
</resources>