<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/md_white_1000"
    app:cardCornerRadius="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:id="@+id/dig_txt_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/select_the_desigred_methode_to_download_tiktok_try_the_other_one_if_one_dosent_work" />

        <Button
            android:id="@+id/dig_btn_met0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_0"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dig_btn_met1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/dig_btn_met2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_2"

            android:textColor="@color/white" />

        <Button
            android:id="@+id/dig_btn_met3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_3"

            android:textColor="@color/white" />

        <Button
            android:id="@+id/dig_btn_met4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_4"

            android:textColor="@color/white" />

        <Button
            android:id="@+id/dig_btn_met5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_5"
            android:textColor="@color/white"

            android:visibility="gone" />

        <Button
            android:id="@+id/dig_btn_met6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg_download_screen"
            android:text="@string/methode_6"
            android:textColor="@color/white"

            android:visibility="gone" />


        <Button
            android:id="@+id/dig_btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shaperound"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.cardview.widget.CardView>