<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_dialog_top"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:id="@+id/view"
            android:layout_width="44dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/download_dialog_drag_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ins_login_bg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_instagram"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/logo_font"
            android:gravity="center"
            android:text="Instagram"
            android:textColor="@color/text_color_main"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ins_login_bg" />

        <TextView
            android:id="@+id/tutorial_tv_1_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="78dp"
            android:alpha="0.8"
            android:fontFamily="sans-serif"
            android:gravity="center"

            android:includeFontPadding="false"
            android:lineSpacingExtra="3dp"
            android:text="@string/dialog_login_des_1"
            android:textColor="@color/text_color_main"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_instagram" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="61dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="61dp"
            android:background="@drawable/bg_btn_login"
            android:fontFamily="@font/product_bold"
            android:gravity="center"

            android:text="@string/dialog_login_button"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_tv_1_1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_login_why"
            app:layout_constraintTop_toBottomOf="@+id/login_btn">

            <View
                android:id="@+id/top_view"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tip_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:src="@drawable/ic_info"
                app:layout_constraintBottom_toBottomOf="@+id/top_view"
                app:layout_constraintStart_toStartOf="@+id/top_view"
                app:layout_constraintTop_toTopOf="@+id/top_view"
                app:tint="#C855BD" />

            <TextView
                android:id="@+id/why_need"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:includeFontPadding="false"
                android:paddingStart="11dp"
                android:paddingEnd="11dp"
                android:text="@string/dialog_login_des_2"
                android:textColor="@color/text_color_main"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/top_view"
                app:layout_constraintStart_toEndOf="@+id/tip_logo"
                app:layout_constraintTop_toTopOf="@+id/top_view" />


            <TextView
                android:id="@+id/reason_why_need"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="sans-serif"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="14dp"
                android:text="@string/dialog_login_des_3"
                android:textColor="@color/text_color_main"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_view" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
